# rust-tool-terminal-command-tips

./: Cargo.toml  README.md  config.yaml
src/: command.rs  config.rs  main.rs
tests/: yaml_test.rs
