[package]
name = "rust-tool-terminal-command-tips"
version = "0.1.0"
authors = ["zhangjun.apk@gmail.com"]
edition = "2024"


[dependencies]
eframe = { version = "0.31.0", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
egui_extras = { version = "0.31.0", features = ["default", "image"] }
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
yaml-rust = "0.4.5"